--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^4.0.2",
+    "gulp-dart-sass": "^1.1.0",
     "gulp-imagemin": "^7.1.0",
-    "gulp-sass": "^6.0.0",
     "gulp-uglify": "^3.0.2",
     "sass": "^1.83.1"
   }
